@@ -1,7 +1,10 @@
 package ru.practicum.service;
 
+import io.micrometer.core.instrument.config.validate.ValidationException;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.mapper.StatisticsMapper;
 import ru.practicum.model.Stat;
 import ru.practicum.statistics.dto.EndpointHitDto;
@@ -11,37 +14,37 @@ import ru.practicum.storage.StatRepository;
 import java.time.LocalDateTime;
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
+@RequiredArgsConstructor
 public class StatServiceImpl implements StatService {
-    private final StatRepository statRepository;
 
-    public StatServiceImpl(StatRepository statRepository) {
-        this.statRepository = statRepository;
-    }
+    private final StatRepository statRepository;
+    private final StatisticsMapper statisticsMapper;
 
     @Override
-    public EndpointHitDto hit(EndpointHitDto request) {
-        Stat stat = new Stat();
-        stat.setApp(request.getApp());
-        stat.setUri(request.getUri());
-        stat.setIp(request.getIp());
-        stat.setCreated(request.getTimestamp());
+    @Transactional
+    public void hit(EndpointHitDto request) {
+        log.info("Saving hit for app: {}, uri: {}, ip: {}",
+                request.getApp(), request.getUri(), request.getIp());
 
-        stat = statRepository.save(stat);
-
-        request.setId(stat.getId());
-
-        return request;
+        Stat stat = statisticsMapper.toStat(request);
+        statRepository.save(stat);
     }
 
     @Override
     public Collection<ViewStatsDto> getStats(LocalDateTime start, LocalDateTime end, List<String> uris, Boolean unique) {
+        if (start.isAfter(end)) {
+            log.error("Validation error: End date {} is before start date {}.", end, start);
+            throw new ValidationException();
+        }
+
         var list = unique ? statRepository.getStatsUnique(start, end, uris) : statRepository.getStats(start, end, uris);
 
         return list.stream()
-                .map(StatisticsMapper::toViewStatsDto)
-                .toList();
+                .map(statisticsMapper::toViewStatsDto)
+                .collect(Collectors.toList());
     }
 }
